7903380: sync jextract for memory session a pure lifetime abstraction panama api change
Reviewed-by: mcimadamore