@@ -26,6 +26,7 @@
 
 package org.openjdk.jextract.clang;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.MemorySession;
 import java.lang.foreign.SegmentAllocator;
@@ -38,14 +39,11 @@ import java.lang.foreign.SegmentAllocator;
  */
 public abstract class ClangDisposable implements SegmentAllocator, AutoCloseable {
     protected final MemorySegment ptr;
-    protected final MemorySession session;
-    protected final SegmentAllocator arena;
+    protected final Arena arena;
 
     public ClangDisposable(MemorySegment ptr, long size, Runnable cleanup) {
-        this.session = MemorySession.openConfined();
-        this.ptr = MemorySegment.ofAddress(ptr.address(), size, session).asReadOnly();
-        session.addCloseAction(cleanup);
-        this.arena = SegmentAllocator.newNativeArena(session);
+        this.arena = Arena.openConfined();
+        this.ptr = MemorySegment.ofAddress(ptr.address(), size, arena.session(), cleanup).asReadOnly();
     }
 
     public ClangDisposable(MemorySegment ptr, Runnable cleanup) {
@@ -54,7 +52,7 @@ public abstract class ClangDisposable implements SegmentAllocator, AutoCloseable
 
     @Override
     public void close() {
-        session.close();
+        arena.close();
     }
 
     @Override
