@@ -21,6 +21,7 @@
  * questions.
  */
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.MemorySession;
@@ -51,7 +52,7 @@ public class LibTest8246341Test {
     @Test
     public void testPointerArray() {
         boolean[] callbackCalled = new boolean[1];
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (Arena arena = Arena.openConfined()) {
             var callback = func$callback.allocate((argc, argv) -> {
                 callbackCalled[0] = true;
                 assertEquals(argc, 4);
@@ -59,7 +60,7 @@ public class LibTest8246341Test {
                 assertEquals(argv.get(C_POINTER, C_POINTER.byteSize() * 1).getUtf8String(0), "python");
                 assertEquals(argv.get(C_POINTER, C_POINTER.byteSize() * 2).getUtf8String(0), "javascript");
                 assertEquals(argv.get(C_POINTER, C_POINTER.byteSize() * 3).getUtf8String(0), "c++");
-            }, session);
+            }, arena.session());
             func(callback);
         }
         assertTrue(callbackCalled[0]);
@@ -67,8 +68,8 @@ public class LibTest8246341Test {
 
     @Test
     public void testPointerAllocate() {
-        try (var session = MemorySession.openConfined()) {
-            var addr = session.allocate(C_POINTER);
+        try (var arena = Arena.openConfined()) {
+            var addr = arena.allocate(C_POINTER);
             addr.set(C_POINTER, 0, MemorySegment.NULL);
             fillin(addr);
             assertEquals(addr.get(C_POINTER, 0).getUtf8String(0), "hello world");
