@@ -22,6 +22,8 @@
  */
 
 import org.testng.annotations.Test;
+
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.MemorySession;
@@ -49,9 +51,9 @@ import test.jextract.test8253102.*;
 public class LibTest8253102Test {
     @Test
     public void test() {
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (Arena arena = Arena.openConfined()) {
             MemorySegment addr = make(14, 99);
-            MemorySegment seg = Point.ofAddress(addr, session);
+            MemorySegment seg = Point.ofAddress(addr, arena.session());
             assertEquals(Point.x$get(seg), 14);
             assertEquals(Point.y$get(seg), 99);
             freePoint(addr);
