@@ -22,6 +22,8 @@
  */
 
 import org.testng.annotations.Test;
+
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySession;
 import test.jextract.test8261511.*;
 import static org.testng.Assert.assertEquals;
@@ -46,9 +48,9 @@ import static test.jextract.test8261511.test8261511_h.*;
 public class Test8261511 {
     @Test
     public void test() {
-        try (MemorySession session = MemorySession.openConfined()) {
-            var funcPtr = Foo.sum$get(get_foo(session));
-            var sumIface = Foo.sum.ofAddress(funcPtr, session);
+        try (Arena arena = Arena.openConfined()) {
+            var funcPtr = Foo.sum$get(get_foo(arena));
+            var sumIface = Foo.sum.ofAddress(funcPtr, arena.session());
             assertEquals(sumIface.apply(15,20), 35);
             assertEquals(sum(1.2, 4.5), 5.7, 0.001);
         }
